<resources>
    <string name="app_name">Lovify</string>
    <string name="next">Next</string>
    <string name="burger">Burger</string>
    <string name="biryani">Biryani</string>
    <string name="pizza">Pizza</string>
    <string name="samosa">Samoso</string>
    <string name="cupCake">CupCake</string>
    <string name="milkShake">Milk Shake</string>
    <string name="pasta">Pasta</string>
    <string name="laddu">Laddu</string>

    <string name="paragraph01">
        At Foodly, we are passionate about delivering exceptional culinary experiences that tantalize your taste buds and ignite your love for food. Our journey began with a simple vision: to create a platform that connects food enthusiasts with the finest flavors, freshest ingredients, and the joy of sharing a meal.
    </string>

    <string name="paragraph">
        <b>Our Mission</b>
        From humble beginnings to a thriving food community, our story is rooted in a deep appreciation for culinary artistry and a commitment to quality. Founded by [Founder\'s Name], [Your Food App Name] started as a dream to bring diverse flavors from around the world to your fingertips.
        <b>Our Approach</b>
        <b>Passion for Flavor:</b> We believe that every dish tells a story, and we\'re dedicated to bringing you recipes that are rich in taste and culture.
        <b>Freshness First:</b> From farm to fork, we prioritize the use of fresh, locally sourced ingredients to create dishes that are not only delicious but also nourishing.
        <b>Community and Connection:</b> Food brings people together, and we\'re committed to fostering a community of food lovers who share their passion for cooking and eating.
        <b>Innovation:</b> We\'re constantly exploring new trends and techniques to keep your culinary journey exciting and cutting-edge.
        <b>Join us in Kitchen</b>
        Whether you\'re cooking for yourself, your family, or a special occasion, [Your Food Recipe App Name] is here to guide you. Dive into our ever-growing collection of recipes, from breakfast to dessert, and embark on a culinary adventure that promises to satisfy your taste buds and creativity.
    </string>

    <string name="burgerrecipe">Indulge in the savory delight of a classic beef burger. Begin by gently shaping a pound of ground beef into four patties, seasoned with a touch of salt and pepper. Grill or pan-fry the patties until they\'re cooked to your preferred level of doneness, adding cheese during the last moments for a gooey finish. Toast the burger buns to golden perfection. Assemble your burger by layering lettuce leaves, juicy tomato slices, and thin rings of onion on the bottom bun. Place the patty on top, followed by optional cheese, pickles, and your choice of condiments like ketchup and mustard. Crown the burger with the top bun and savor the harmonious blend of flavors and textures. Serve alongside your favorite sides and relish this timeless culinary pleasure.</string>
</resources>